@@ -1,18 +1,19 @@
 import sbt._
 
+val ZIOVersion = "2.0.0"
+val ScalaVersionConstant = "2.13.8"
+
 lazy val functionalDesign = (project in file(".")).
   settings (
     name := "Functional Design",
     organization := "net.degoes",
-    version := "0.1-SNAPSHOT",
-    scalaVersion := "2.12.10"
-    // add other settings here
+    version := "0.2",
+    scalaVersion := ScalaVersionConstant,
+    testFrameworks := Seq(new TestFramework("zio.test.sbt.ZTestFramework"))
   )
 
 /* scala versions and options */
-scalaVersion := "2.12.10"
-
-addCompilerPlugin("org.spire-math" %% "kind-projector" % "0.9.6")
+scalaVersion := ScalaVersionConstant
 
 // These options will be used for *all* versions.
 scalacOptions ++= Seq(
@@ -22,67 +23,22 @@ scalacOptions ++= Seq(
   , "-Xlint"
   , "-Xverify"
   , "-feature"
-  ,"-Ypartial-unification"
-  //,"-Xfatal-warnings" // Recommend enable before you commit code
   , "-language:_"
-  //,"-optimise"
+  , "-Wconf:msg=a type was inferred to be `Any`:silent"
 )
 
 javacOptions ++= Seq("-Xlint:unchecked", "-Xlint:deprecation", "-source", "1.7", "-target", "1.7")
 
-// javaOptions in Universal ++= Seq(
-//   "-J-server",
-//   "-J-Xms1g -Xmx4g",
-//   "-J-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled",
-//   "-J-XX:+UseCMSInitiatingOccupancyOnly -XX:CMSInitiatingOccupancyFraction=68",
-//   "-J-XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark",
-//   "-J-XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=100M"
-// )
 
-val CatsVersion = "2.1.0"
-val CatsEffectVersion = "2.1.1"
-val MonixVersion = "3.1.0"
-val ZIOVersion = "1.0.2"
-val ShapelessVersion = "2.3.3"
-val FS2Version = "2.2.2"
-val AmmoniteVersion = "2.0.0"
 
 libraryDependencies ++= Seq(
-  "com.typesafe" % "config" % "1.3.1",
-  // -- testing --
-  "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
-  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
-  // -- Logging --
-  "ch.qos.logback" % "logback-classic" % "1.1.3",
-  "com.typesafe.scala-logging" %% "scala-logging" % "3.9.0",
-  // Cats
-  "org.typelevel" %% "cats-core" % CatsVersion,
-  "org.typelevel" %% "cats-effect" % CatsEffectVersion,
-  // fs2
-  "co.fs2" %% "fs2-core" % FS2Version,
-  // monix
-  "io.monix" %% "monix" % MonixVersion,
-  // shapeless
-  "com.chuusai" %% "shapeless" % ShapelessVersion,
-  // scalaz
-  "dev.zio" %% "zio" % ZIOVersion,
-  "dev.zio" %% "zio-streams" % ZIOVersion,
-  // type classes
-  "com.github.mpilquist" %% "simulacrum" % "0.12.0",
-  // li haoyi ammonite repl embed
-  "com.lihaoyi" % "ammonite" % AmmoniteVersion % "test" cross CrossVersion.full
+  "dev.zio" %% "zio"          % ZIOVersion,
+  "dev.zio" %% "zio-streams"  % ZIOVersion,
+  "dev.zio" %% "zio-test"     % ZIOVersion  % Test,
+  "dev.zio" %% "zio-test-sbt" % ZIOVersion  % Test
 )
 
 resolvers ++= Seq(
-  "Typesafe Snapshots" at "http://repo.typesafe.com/typesafe/snapshots/",
   "Secured Central Repository" at "https://repo1.maven.org/maven2",
   Resolver.sonatypeRepo("snapshots")
 )
-
-// ammonite repl
-sourceGenerators in Test += Def.task {
-  val file = (sourceManaged in Test).value / "amm.scala"
-  IO.write(file, """object amm extends App { ammonite.Main().run() }""")
-  Seq(file)
-}.taskValue
-
